# proto-lens-jsonpb

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  cabal.project  go.mod  go.sum  proto-lens-jsonpb.cabal  stack-snapshot.yaml
.github/workflows/: haskell.yml
app/: Main.hs
app/Proto/: Haberdasher.hs  Haberdasher_Fields.hs  Haberdasher_JSON.hs
example/: example.cabal
example/app/Proto/: Haberdasher.hs  Haberdasher_Fields.hs  Haberdasher_JSON.hs
proto/: haberdasher.proto
protoc-gen-jsonpb_haskell/: main.go
script/: build-and-upload  protoc
src/Data/ProtoLens/: JSONPB.hs
src/Data/ProtoLens/JSONPB/: Class.hs
