# Set all target’s visibility in this package to "public".
package(default_visibility = ["//visibility:public"])

# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
    "haskell_toolchain_library",
)

# The GHC bindists provide us with a set of builtin libraries.
# We use them rather than looking up those in stackage.

haskell_toolchain_library(name = "base")

haskell_toolchain_library(name = "bytestring")

haskell_toolchain_library(name = "containers")

haskell_toolchain_library(name = "filepath")

haskell_toolchain_library(name = "text")

haskell_library(
    name = "proto-lens-jsonpb",
    srcs = glob(["src/**/*.hs"]),
    deps = [
        ":base",
        ":bytestring",
        ":containers",
        ":filepath",
        ":text",
        "@stackage//:aeson",
        "@stackage//:attoparsec",
        "@stackage//:base64-bytestring",
        "@stackage//:proto-lens-runtime",
        "@stackage//:vector",
    ],
)
