cabal-version:  2.4

name:           proto-lens-jsonpb
version:        0.1.0.0
synopsis:       JSON protobuf encoding for proto-lens
description:    Please see the README on GitHub at <https://github.com/tclem/proto-lens-jsonpb#readme>
homepage:       https://github.com/tclem/proto-lens-jsonpb#readme
bug-reports:    https://github.com/tclem/proto-lens-jsonpb/issues
license:        BSD-3-Clause
license-file:   LICENSE
author:         Timothy Clem
maintainer:     timothy.clem@gmail.com
copyright:      2019 Timothy Clem
build-type:     Simple
extra-source-files: README.md

tested-with:    GHC == 8.6.5

-- GHC extensions shared between targets
common haskell
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , StandaloneDeriving
                     , StrictData
                     , TypeApplications
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

common dependencies
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , proto-lens-runtime >= 0.5.0.0
    , text
    , vector
    , attoparsec
    , base64-bytestring

library
  import: haskell, dependencies
  exposed-modules:
      Data.ProtoLens.JSONPB
      Data.ProtoLens.JSONPB.Class
  other-modules:
      Paths_proto_lens_jsonpb
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:

executable example
  import: haskell, dependencies
  main-is: Main.hs
  other-modules:
      Proto.Haberdasher
      Proto.Haberdasher_Fields
      Proto.Haberdasher_JSON
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      proto-lens >= 0.5.0.0
    , proto-lens-jsonpb
    , microlens

source-repository head
  type: git
  location: https://github.com/tclem/proto-lens-jsonpb
