cabal-version:  2.4

name:           jsonpb-example
version:        0.2.0.2
synopsis:       Example app
description:    Please see the README on GitHub at <https://github.com/tclem/proto-lens-jsonpb#readme>
homepage:       https://github.com/tclem/proto-lens-jsonpb#readme
bug-reports:    https://github.com/tclem/proto-lens-jsonpb/issues
license:        BSD-3-Clause
author:         Timothy Clem
maintainer:     timothy.clem@gmail.com
copyright:      2019 Timothy Clem
category:       Web
build-type:     Simple

tested-with:    GHC == 8.6.5
              , GHC == 8.8.1
              , GHC == 8.10.1

-- GHC extensions shared between targets
common haskell
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , StandaloneDeriving
                     , StrictData
                     , TypeApplications
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

common dependencies
  build-depends:
      base >=4.7 && <5
    , aeson >=1.4 && <1.6
    , bytestring >= 0.10.8
    , proto-lens-runtime >= 0.5 && <0.8
    , text ^>= 1.2.3.2
    , vector >= 0.12.0.3
    , attoparsec >= 0.13.2.3
    , base64-bytestring >= 1

executable example
  import: haskell, dependencies
  main-is: Main.hs
  other-modules:
      Proto.Haberdasher
      Proto.Haberdasher_Fields
      Proto.Haberdasher_JSON
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      proto-lens >= 0.5.0.0
    , proto-lens-jsonpb
    , microlens

source-repository head
  type: git
  location: https://github.com/joshvera/proto-lens-jsonpb
  tag: 186611729bb2a9f2962703e814c9528154ef04fc
